61 fix sonar issues V3 (#64)